--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 ></span>
                             </button>
                             <a
-                                href="https://github.com/paterkleomenis"
+                                href="https://github.com/paterkleomenis/PirateFlix"
                                 target="_blank"
                                 class="nav-link flex items-center"
                             >
@@ -187,7 +187,7 @@
                             ></span>
                         </button>
                         <a
-                            href="https://github.com/paterkleomenis/"
+                            href="https://github.com/paterkleomenis/PirateFlix/"
                             target="_blank"
                             class="px-4 py-2 hover:bg-gray-800 rounded-lg transition-colors"
                             >GitHub</a
