--- a/watch.html
+++ b/watch.html
@@ -53,7 +53,7 @@
                                   class="bg-red-600 text-white text-xs flex items-center justify-center rounded-full w-6 h-6"
                                   x-text="watchLaterCount"></span>
                         </button>
-                        <a href="https://github.com/paterkleomenis" target="_blank" class="nav-link flex items-center">
+                        <a href="https://github.com/paterkleomenis/PirateFlix" target="_blank" class="nav-link flex items-center">
                             <span>GitHub</span>
                         </a>
                     </div>
@@ -84,7 +84,7 @@
                               class="bg-red-600 text-white text-xs flex items-center justify-center rounded-full w-6 h-6"
                               x-text="watchLaterCount"></span>
                     </button>
-                    <a href="https://github.com/paterklemenis" target="_blank"
+                    <a href="https://github.com/paterkleomenis/PirateFlix" target="_blank"
                        class="px-4 py-2 hover:bg-gray-800 rounded-lg transition-colors">GitHub</a>
                 </div>
             </div>
